src/objects/E2_Estimate_Milestone__c.object
<CustomObject>
    <description>This object is used to store all the milestone details associated with a presales estimate. Related to Estimator 2.0 App</description>
    <fields>
        <fullName>Estimate__c</fullName>
        <description>Association with presales estimate</description>
        <label>Estimate</label>
        <referenceTo>CMC_Presales_LOE__c</referenceTo>
        <relationshipLabel>Estimate Milestones</relationshipLabel>
        <relationshipName>Estimate_Milestones</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Milestone1__c</fullName>
        <description>Primary Milestone Name</description>
        <label>Milestone1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Milestone2__c</fullName>
        <description>Secondary Milestone Name</description>
        <label>Milestone2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <description>Order</description>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Estimate Milestone</label>
    <nameField>
        <displayFormat>EM-{0000000000}</displayFormat>
        <label>Estimate Milestone Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Estimate Milestones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>